# onixcheck

./: .bumpversion.cfg  .cookiecutterrc  .gitignore  .travis.yml  AUTHORMS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  pyinstaller.spec  pyproject.toml  setup.cfg  setup.py  tox.ini  version_info.txt  winbuild.bat
.github/: FUNDING.yml
.github/workflows/: tests.yml
docs/: conf.py  conventions.md  index.rst  installation.rst  usage.rst
docs/reference/: index.rst  onixcheck.rst
src/onixcheck/: __init__.py  __main__.py  exeptions.py  models.py  onixfix.py  schema.py  utils.py  validation.py
src/onixcheck/data/: Google Sample ONIX 2.1.xml  __init__.py  invalid_google_onix_3.xml  invalid_onix3_ref.xml  invalid_onix_root.xml  valid_google_onix_3.xml  valid_onix2_ref.xml  valid_onix3_ref.xml  valid_onix3_ref_ns.xml  valid_onix3_short.xml  win_console_issue.xml
src/onixcheck/profiles/: __init__.py  google_onix_30.yaml
src/onixcheck/profiles/biblon/: biblon_3.0.yaml
src/onixcheck/rng3.0/: ONIX_BookProduct_CodeLists.rng
src/onixcheck/sch3.0/: BISAC_SubjectCategory_Codelists.xsd  Short_2.51.sch
src/onixcheck/schema/: __init__.py
src/onixcheck/schema/biblon/: biblon_2.1.yaml  biblon_onix_30.rng  biblon_onix_30.yaml
src/onixcheck/schema/google/: google_onix_30.yaml
src/onixcheck/schema/rnc3.0/: ONIX_BookProduct_3.0_reference.rnc  ONIX_BookProduct_CodeLists.rnc  ONIX_XHTML_Subset.rnc
src/onixcheck/schema/rng3.0/: ONIX_BookProduct_3.0_reference.rng  ONIX_BookProduct_3.0_short.rng  ONIX_BookProduct_CodeLists.rng  ONIX_XHTML_Subset.rng
src/onixcheck/xsd2.1/: ONIX_XHTML_Subset_reference.xsd
src/onixcheck/xsd3.0/: ONIX_BookProduct_3.0_reference_strict.xsd  ONIX_BookProduct_3.0_short_strict.xsd  ONIX_BookProduct_CodeLists.xsd  ONIX_XHTML_Subset.xsd
tests/: test_models.py  test_onixcheck.py  test_onixfix.py  test_utils.py  test_validation.py  test_version.py
(+17 files in other folders)
